--- a/style.css
+++ b/style.css
@@ -68,3 +68,18 @@ list-style-type:'~ ';
 body li{
 margin-bottom:0.7vw;
 }
+
+
+/* Style all font awesome icons */
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
