--- a/style.css
+++ b/style.css
@@ -1,28 +1,28 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Serif');
 
-body{
+body {
 margin-left:auto;
 margin-right:auto;
 font-family: 'PT Serif', serif;
 }
 
 
-header{
+header {
 margin-top:5%;
 margin-bottom:2%;
 text-style:bold;
 text-align:center;
 }
 
-a{
+a {
 color:#26619c;
 }
 
-a:hover{
+a:hover {
 color:#93baff;
 }
 
-#languagebar li{
+#languagebar li {
 display: inline;
 margin-right:3vw;
 }
@@ -35,37 +35,37 @@ padding: 0;
 overflow:hidden;
 }
 
-#navbar li{
+#navbar li {
 display:inline;
 }
 
-#navbar li a{
+#navbar li a {
 padding:10px;
 }
 
-#break{
+#break {
 margin:auto;
 text-align:center;
 }
 
-h1{
+h1 {
 font-size: 3em;
 word-spacing: 1vw;
 font-weight: bold;
 }
 
-body{
+body {
 margin:auto;
 max-width: 700px;
 text-align:justify;
 text-justify:inter-word;
 }
 
-#writing ul{
+#writing ul {
 list-style-type:'~ ';
 }
 
-body li{
+body li {
 margin-bottom:0.7vw;
 }
 
@@ -79,7 +79,87 @@ margin-bottom:0.7vw;
   text-decoration: none;
 }
 
-/* Add a hover effect if you want */
 .fa:hover {
   opacity: 0.7;
+}
+
+
+/* Style for separator */
+
+.wrapper {
+	padding-bottom: 90px;
+}
+
+.divider {
+	position: relative;
+	margin-top: 90px;
+	height: 1px;
+}
+
+.div-transparent:before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 5%;
+	right: 5%;
+	width: 90%;
+	height: 1px;
+	background-image: linear-gradient(to right, transparent, rgb(48,49,51), transparent);
+}
+
+.div-arrow-down:after {
+	content: "";
+	position: absolute;
+	z-index: 1;
+	top: -7px;
+	left: calc(50% - 7px);
+	width: 14px;
+	height: 14px;
+	transform: rotate(45deg);
+	background-color: white;
+	border-bottom: 1px solid rgb(48,49,51);
+	border-right: 1px solid rgb(48,49,51);
+}
+
+.div-tab-down:after {
+	content: "";
+	position: absolute;
+	z-index: 1;
+	top: 0;
+	left: calc(50% - 10px);
+	width: 20px;
+	height: 14px;
+	background-color: white;
+	border-bottom: 1px solid rgb(48,49,51);
+	border-left: 1px solid rgb(48,49,51);
+	border-right: 1px solid rgb(48,49,51);
+	border-radius: 0 0 8px 8px;
+}
+
+.div-stopper:after {
+	content: "";
+	position: absolute;
+	z-index: 1;
+	top: -6px;
+	left: calc(50% - 7px);
+	width: 14px;
+	height: 12px;
+	background-color: white;
+	border-left: 1px solid rgb(48,49,51);
+	border-right: 1px solid rgb(48,49,51);
+}
+
+.div-dot:after {
+	content: "";
+	position: absolute;
+	z-index: 1;
+	top: -9px;
+	left: calc(50% - 9px);
+	width: 18px;
+	height: 18px;
+	background-color: goldenrod;
+	border: 1px solid rgb(48,49,51);
+	border-radius: 50%;
+	box-shadow: inset 0 0 0 2px white,
+					0 0 0 4px white;
 }
