--- a/style.css
+++ b/style.css
@@ -1,78 +1,64 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Serif');
 
 body {
-margin-left:auto;
-margin-right:auto;
-font-family: 'PT Serif', serif;
-}
-
-
-header {
-margin-top:5%;
-margin-bottom:2%;
-text-style:bold;
-text-align:center;
-}
-
-a {
-color:#26619c;
-}
-
-a:hover {
-color:#93baff;
-}
-
-#languagebar li {
-display: inline;
-margin-right:3vw;
-}
-
-
-#navbar ul {
-list-style-type: none;
-margin: 0;
-padding: 0;
-overflow:hidden;
-}
-
-#navbar li {
-display:inline;
-}
-
-#navbar li a {
-padding:10px;
-}
-
-#break {
-margin:auto;
-text-align:center;
-}
-
-h1 {
-font-size: 3em;
-word-spacing: 1vw;
-font-weight: bold;
-}
-
-body {
-margin:auto;
-max-width: 700px;
-text-align:justify;
-text-justify:inter-word;
-}
-
-#writing ul {
-list-style-type:'~ ';
+  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'PT Serif', serif;
+  max-width: 700px;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 body li {
-margin-bottom:0.7vw;
+  margin-bottom: 0.7vw;
+}
+
+header {
+  margin-top: 5%;
+  margin-bottom: 2%;
+  text-style: bold;
+  text-align: center;
 }
 
 
-/* Style all font awesome icons */
+h1 {
+  font-size: 3em;
+  word-spacing: 1vw;
+  font-weight: bold;
+}
+
+a {
+  color: #000000;
+}
+
+a:hover {
+  color: #93baff;
+}
+
+#navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow:hidden;
+}
+
+#navbar li {
+  display: inline;
+}
+
+#navbar li a {
+  padding: 10px;
+}
+
+#break {
+  margin:auto;
+  text-align:center;
+}
+
+/* Style social icons */
 .fa {
-  padding: 20px;
+  padding: 2px;
   font-size: 30px;
   width: 50px;
   text-align: center;
