--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   margin: auto;
   margin-left: auto;
   margin-right: auto;
-  font-family: 'PT Serif', serif;
+  font-family: helvetica,sans-serif;
   max-width: 700px;
   text-align: justify;
   text-justify: inter-word;
@@ -21,7 +21,6 @@ header {
   text-align: center;
 }
 
-
 h1 {
   font-size: 3em;
   word-spacing: 1vw;
@@ -35,6 +34,11 @@ a {
 
 a:hover {
   color: #9c9fa6;
+}
+
+#content {
+  font-family: helvetica,sans-serif;
+  font-size: 22px;
 }
 
 #navbar ul {
