--- a/style.css
+++ b/style.css
@@ -1,17 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Serif');
 
 body {
-  margin: auto;
   margin-left: auto;
   margin-right: auto;
   font-family: helvetica,sans-serif;
   max-width: 1000px;
   text-align: justify;
-  text-justify: inter-word;
 }
 
 #main_title {
   font-size: 150px;
+  margin-bottom: 3%;
 }
 
 header {
