--- a/style.css
+++ b/style.css
@@ -9,16 +9,16 @@ body {
   margin-bottom: 15%;
 }
 
-#main_title {
-  font-size: 150px;
-  margin-bottom: 3%;
-}
-
 header {
-  margin-top: 0%;
+  margin-top: -10%;
   margin-bottom: 100%;
   text-style: bold;
   text-align: center;
+}
+
+#main_title {
+  font-size: 150px;
+  margin-bottom: 3%;
 }
 
 a {
@@ -29,13 +29,14 @@ a {
 
 a:hover {
   color: #9c9fa6;
+  font-style: oblique;
 }
 
-div.section {
+.section {
   margin-top: 50%;
 }
 
-div.sub_title {
+.sub_title {
   margin-bottom: 5%;
   font-size: 50px;
   text-style: bold;
