--- a/index.css
+++ b/index.css
@@ -14,8 +14,16 @@ header {
   text-align: center;
 }
 
-#header_separator {
-  height: 15vh;
+@media screen and (min-width: 1024px){
+  #header_separator {
+    height: 15vh;
+  }
+}
+
+@media screen and (max-device-width: 480px) and (orientation: portrait){
+  #header_separator {
+    height: 33vh;
+  }
 }
 
 #main_title {
