--- a/index.css
+++ b/index.css
@@ -4,7 +4,6 @@ body {
   margin-left: auto;
   margin-right: auto;
   font-family: helvetica,sans-serif;
-  max-width: 1000px;
   text-align: justify;
   margin-bottom: 15%;
 }
@@ -15,12 +14,22 @@ header {
 }
 
 @media screen and (min-width: 1024px){
+
+  body {
+    max-width: 1000px;
+  }
+
   #header_separator {
     height: 15vh;
   }
 }
 
 @media screen and (max-device-width: 480px) and (orientation: portrait){
+  
+  body {
+    max-width: 350px;
+  }
+
   #header_separator {
     height: 33vh;
   }
