--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ header {
   text-align: center;
 }
 
+/* Desktop */
 @media screen and (min-width: 1024px){
 
   #header_separator {
@@ -21,12 +22,16 @@ header {
   }
 }
 
+/* Mobile */
 @media screen and (max-device-width: 480px) and (orientation: portrait){
   
   header {
     margin-left: auto;
     margin-right: auto;
     max-width: 350px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
   }
 
   #header_separator {
